# PulseFiServerside

./: .env  Cargo.toml
.sqlx/: query-8b2c35a80d579b088c79cadbd059540b3bee40d7b85321e7d1861834ba3678e1.json  query-aada64659be2a9c6426b144e6443dda7b43123119170c83ae7163cf302f1c365.json
migrations/: 20251102195147_create_users_table.sql
src/: main.rs
src/api/: authentification.rs  logs.rs  mod.rs  proxy.rs  user.rs
src/db_hooks/: mod.rs  redis.rs
src/errors/: bd_errors.rs  mod.rs
src/middleware/: jwt_middleware.rs  mod.rs
src/models/: config.rs  logs_bd_struct.rs  mod.rs  request_data.rs  user_bd_struct.rs
src/repositories/: logs_bd.rs  mod.rs  redis.rs  user_bd.rs
src/services/: auth_tokens.rs  helpers.rs  mod.rs  signatures.rs
