[package]
name = "PulseFiServerside"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7.1"
ed25519-dalek = "2.2.0"
bs58 = "0.5.1"
rand = "0.8"
base64 = "0.22.1"
jsonwebtoken = "9"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0.145"
actix-web-lab = "0.24.3"
awc = "3.8.1"
actix-ws = "0.3.0"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
tokio = "1.47.1"
url = "2.5.7"